--- a/src/app/products/product-item/product-item.component.scss
+++ b/src/app/products/product-item/product-item.component.scss
@@ -11,8 +11,10 @@
   }
 
   img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     object-fit: cover;
-    width: 100%;
     height: 100%;
     object-position: center center;
   }
